[gd_scene load_steps=10 format=2]

[ext_resource path="res://SkylineLayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Skyline.gd" type="Script" id=2]
[ext_resource path="res://grey.png" type="Texture" id=3]
[ext_resource path="res://BuildingFactory.tscn" type="PackedScene" id=4]
[ext_resource path="res://arttest/SkyRenderManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://arttest/building_shader.gdshader" type="Shader" id=6]
[ext_resource path="res://PersonManager.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/window_color = Color( 1, 0.8, 0.7, 1 )
shader_param/FIXED_TIME_OF_DAY = null
shader_param/residentialness = 1.0
shader_param/WINDOW_OFFSET = null
shader_param/override_tint_color = Color( 0, 0, 0, 0 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( -179.066, 94.685, 179.066, -94.685, -224, 328, -366.809, -61.1811, 366.809, 61.1811, 694, 304, -101.643, 67.6043, 101.643, -67.6043, 1302, 248 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BuildingFactory" parent="." instance=ExtResource( 4 )]

[node name="SkyRenderManager" parent="." instance=ExtResource( 5 )]
position = Vector2( -13, -62 )
buildingMaterial = SubResource( 1 )
SECONDS_PER_DAY = 15.0

[node name="PersonManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="LayerArray" parent="." instance=ExtResource( 1 )]
z_index = 3

[node name="LayerArray2" parent="." instance=ExtResource( 1 )]
z_index = 2

[node name="LayerArray3" parent="." instance=ExtResource( 1 )]
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 511.143, 301.606 )
current = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.937, 304.781 )
scale = Vector2( 15.9563, 1 )
z_index = 11
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
position = Vector2( 32.0032, 169.912 )
scale = Vector2( 0.0222557, 2.73622 )
texture = ExtResource( 3 )
offset = Vector2( -32, -21.4873 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( -30.5985, 176.849 )
scale = Vector2( 0.0222557, 2.73622 )
texture = ExtResource( 3 )
offset = Vector2( -32, -21.4873 )

[node name="Terrain" type="Path2D" parent="."]
position = Vector2( -5, -20 )
z_index = 10
curve = SubResource( 2 )
